Fixed alignment.

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -259,7 +259,7 @@ h4 {
 .grandcanyon2-msg {
     grid-column: 1/2;
     grid-row: 2/3;
-    margin: 50px;
+    margin: 10px;
 }
 
 .salmonriver-img {
